# sekai-agent

./: .gitignore  README.md  import_data.py  main.py  pyproject.toml  requirements.txt  setup_milvus.py  start.sh
agents/: __init__.py  evaluation.py  prompt_optimizer.py  recommendation.py
config/: __init__.py  config.yaml
sample_data/: stories.json
utils/: dspy.py  evaluation_metrics.py  llm_factory.py  logger.py  metrics_callback.py  user_profile.py  vector_store.py
