[project]
name = "sekai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.27",
    "google-generativeai>=0.8.5",
    "graphviz>=0.20.3",
    "ipython>=9.3.0",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.64",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.21",
    "langchain-postgres>=0.0.14",
    "langgraph>=0.4.8",
    "psycopg2>=2.9.10",
    "pymilvus[model]>=2.5.11",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
